v1.??? -
Modified:
* Callbacks:
	- MC_PRE_PLAYERHUD_TRINKET_RENDER: now provides [Vector] CropOffset parameter and accepts CropOffset vector in the return table.
Additions:
* Lootlist:
	- constructor
	- PushEntry(Type, Variant, SubType, Seed = Random(), RNG = nil)
	- GetEntries
* LootListEntry:
	- [Get]Type/Variant/SubType/Seed/RNG
* EntityPlayer:
	- Get/SetBombPlaceDelay
	- Get/SetBloodLustCounter
	- New functionality for blocking items:
		BlockCollectible(int itemID)
		UnblockCollectible(int itemID)
		IsCollectibleBlocked(int itemID)
	- Change to HasCollectible and GetCollectibleNum:
		new optional boolean (IgnoreBlock), ignores collectible block when set to true
* EntityTear:
	- GetTearHaloSprite
	- GetTearEffectSprite
	- GetDeadEyeSprite
* EntityPickup:
	- GetLootList(ShouldAdvance = false)
	- GetPickupGhost
	- UpdatePickupGhosts
* EntityNPC:
	- GetFireplaceLoot
	- GetShopkeeperLoot
* ItemConfigItem:
	- HasCustomTag
	- GetCustomTags
* Input:
	- GetDeviceNameByIdx
* Game
	- SetBloom
* Console:
	* Added a popup error when a script ran by luamod errors, highlighting the last error thrown, to prevent it from being instantly buried
* Isaac:
	- StartNewGame(int playertype, int challenge, int difficulty, int seed), allows starting the game from within the main menu
* MenuManager:
	- SetInputMask(int mask) for use with the new ButtonActionBitwise enum, selectively allows/disallows the game's menu read certain inputs, useful for custom menus
	- GetInputMask()
* MinimapState Enum:
	- Used for Minimap.SetState() and Minimap.GetState().
* RoomConfig:
	RoomConfig:GetStage(StbType)
* RoomConfigStage
	* Get/Set DisplayName, Suffix, PlayerSpot, BossSpot, Music, Backdrop
	* GetRoomSet(Mode)
* RoomConfigSet:
	* Acts like other ArrayProxy classes, but for RoomConfigRoom
	* __len and Get method, Size const variable
* Level
	* Set/GetGreedWavesClearedWithoutRedHeartDamage: you read that right, finally, the highly requested function is here! 
* Cutscenes